--- a/web/templates/audio_file/show.html.eex
+++ b/web/templates/audio_file/show.html.eex
@@ -9,7 +9,7 @@
 
   <li>
     <strong>Transcription file path:</strong>
-    <%= @audio_file.transcription_file_path %>
+    <%= @audio_file.audio_name %>
   </li>
 
   <li>
