--- a/web/templates/audio_file/index.html.eex
+++ b/web/templates/audio_file/index.html.eex
@@ -13,7 +13,7 @@
   <tbody>
 <%= for audio_file <- @audio_file do %>
     <tr>
-      <td><%= audio_file.audio_path %></td>
+      <td><%= audio_file.id %>_<%= audio_file.audio_path %></td>
       <td><%= audio_file.audio_name %></td>
       <td><%= audio_file.audio_duration %></td>
 
